Various issues with rpm-ostree layered packages installation
Description of problem:
Additional rpm-ostree packages from Fedora repository can now be easily installed using GNOME Software on Fedora Silverblue Rawhide, however I have found multiple issues when testing it:
- When searching applications in GNOME Software with Flathub enabled, some applications are displayed twice - Fedora rpm-ostree version and Flatpak version. Other applications are displayed correctly - one time with package sources selectable on the application detail page. Even worse is that when such application is displayed two times, rpm-ostree version is in many cases displayed as first result and there is no "Source: " shown; the only way to find which result is a correct one is to click on it and see Source on the application detail page.
- Some applications (for example Abiword) fail to install (this may be a Rawhide issue, I am not sure), "GDBus.Error:org.projectatomic.rpmostreed.Error.Failed: Some base packages would be replaced" error is displayed by GS and "can't reliably fixup error code 36 in domain g-io-error-quark" error is shown on GS stdout.
- Layered application cannot be started using the "Launch" button in GS until reboot. This is obvious considering how layering works, however the button should not be displayed in GS for such apps.
- Layered application has "Source: Unknown" instead of the correct "Source: fedoraproject.org" displayed on its details page.
- After uninstalling a previously layered application in GNOME Software, the uninstalled app is shown as installed until system reboot and no dialog advising the user to reboot their computer is displayed.
Version-Release number of selected component (if applicable):
gnome-software-3.31.90-1.fc31.x86_64
How reproducible:
Every time.