rpm-ostree: Add remote dbus error conversion

... so that we don't get literal "org.projectatomic.rpmostreed.Error"
strings in the errors shown in the UI.

https://gitlab.gnome.org/GNOME/gnome-software/issues/604